remove Java 9 dependencies for XRefs generation